--- a/root/templates/orgedit.html
+++ b/root/templates/orgedit.html
@@ -45,6 +45,7 @@
         </div>
         <div class="text-center">
             <button class="btn btn-primary">Save Edits</button>
+            <a href="{{dashboard_url}}" class="btn red-button">Cancel</a>
         </div>
     </form>
 </div>
