Separating first and last name fields.

--- a/root/templates/signup.html
+++ b/root/templates/signup.html
@@ -20,7 +20,11 @@
         </div>
 
         <div class="form-group">
-            <input class="form-control" name="full-name" type="text" placeholder="First name last name">
+            <input class="form-control" name="first-name" type="text" placeholder="First name*">
+        </div>
+
+        <div class="form-group">
+            <input class="form-control" name="last-name" type="text" placeholder="Last name*">
         </div>
 
         <div class="form-group">
