--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -79,7 +79,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" name="message_subject" placeholder="Subject"/>
                         <textarea class="form-control" row="5" name="message_body" placeholder="Send a message to those who signed up."></textarea>
-                        <label class="htmlCheckBox"><input type="checkbox" name="message_html" value="checked">Check if this is an HTML email</label>
+                        <!--<label class="htmlCheckBox"><input type="checkbox" name="message_html" value="checked">Check if this is an HTML email</label>-->
                         <input type="submit" class="btn btn-primary" name="blast_emails" value="Blast Email"/>
                     </div>
                 </form>
